--- a/_internal/static/styles.qss
+++ b/_internal/static/styles.qss
@@ -1,186 +1,6 @@
-/* styles.css
-QMainWindow {
-    background-color: #d0b3ff;
-}*/
-
-QWidget {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffffff, stop: 1 #e6e6e6);
-    border: none;
-    border-radius: 10px;
-    margin: 0px;
-} 
-
-QWidget#centralWidget {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #d0b3ff, stop: 1 #a280d2);
-    border: none;
-    border-radius: 0px;
-}
-
-QSplitter {
-    background-color: #d0b3ff;
-    color: #d0b3ff;
-    border: none;
-    border-radius: 0px;
-}
-
-QFrame#sidebarFrame {
-    border: 2px solid #8e7bbb;
-}
-
-QStackedWidget {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffffff, stop: 1 #e6e6e6);
-    border: 2px solid #8e7bbb;
-    border-radius: 10px;
-    padding: 5px;
-}
-
-QPushButton {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #8e7bbb, stop: 1 #755d95);
-    color: #000000;
-    border-radius: 10px;
-    border: 2px solid #8e7bbb;
-    padding: 5px;
-    min-height: 20px;
-    min-width: 100px;
-}
-
-QPushButton:hover {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #e6e6e6, stop: 1 #cccccc);
-}
-
-QPushButton#sidebarButton {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #8e7bbb, stop: 1 #755d95);
-    color: #000000;
-    border-radius: 10px;
-    border: 2px solid #8e7bbb;
-    padding: 5px;
-    min-height: 30px;
-    min-width: 100px;
-    text-align: left;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-transform: uppercase;
-}
-
-QPushButton#sidebarButton:hover {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #e6e6e6, stop: 1 #cccccc);
-    text-align: left;
-}
-
-QTextEdit {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffffff, stop: 1 #e6e6e6);
-    color: #333333;
-    border-radius: 10px;
-    border: 2px solid #8e7bbb;
-    margin: 5px;
-    padding: 5px;
-}
-
-QLineEdit {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffffff, stop: 1 #e6e6e6);
-    color: #333333;
-    border-radius: 10px;
-    padding: 5px;
-    border: 2px solid #8e7bbb;
-    margin: 5px;
-}
-
-QLineEdit:focus {
-    border: 2px solid #3498db;
-}
-
-QVBoxLayout {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffffff, stop: 1 #e6e6e6);
-    border: 2px solid #8e7bbb;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-QHBoxLayout {
-    background-color: qlineargradient(spread: pad, x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffffff, stop: 1 #e6e6e6);
-    border: 2px solid #8e7bbb;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-QListWidget {
-    background-color: none;
-    border: 2px solid #8e7bbb;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-QTableWidget { 
-    border: 2px solid #8e7bbb;
-    border-radius: 10px;
-    margin: 0px; 
-    padding: 0;
-}
-
-QTableWidget::item {
-    border: 1px solid #8e7bbb; 
-}
-
-QTableWidget::item:selected { 
-    background-color: #e6e6e6; 
-    color: #000000;
-}
-
-QTableWidget::item:focus { 
-    border: 1px solid #8e7bbb; 
-}
-
-QTableWidget::item:selected:focus { 
-    border: 1px solid #007bff; 
-}
-
-QHeaderView::section { 
-    background-color: #8e7bbb; 
-    color: #000000; 
-    font-size: 14px; 
-    font-weight: bold; 
-    border: none; 
-    min-height: 40px;
-}
-
-QTextBrowser {
-    background-color: none;
-    color: #333333;
-    border-radius: 5px;
-    border: 2px solid #8e7bbb;
-    margin: 5px;
-    padding: 5px;
-}
-
-
-QLabel {
-    font-size: 20px;
-    font-weight: bold;
-    color: #000000;
-    background-color : none;
-    height: 20px;
-}
-
-
-QCheckBox {
-    background: transparent;
-    color: #000000;
-}
-
-QCheckBox::indicator {
-    width: 10px;
-    height: 10px;
-    background: transparent;
-    border: 2px solid #000000;
-    border-radius: 5px;
-}
-
-QCheckBox::indicator:checked {
-    background-color: #755d95;
-}
-
-
-
-
+QPushButton {{
+    color: {QTMATERIAL_SECONDARYCOLOR};
+    text-transform: none;
+    background-color: {QTMATERIAL_PRIMARYCOLOR};
+  }}
 
